--- a/Study_Case_02_Kelompok_05.ipynb
+++ b/Study_Case_02_Kelompok_05.ipynb
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "iTSclcvhiwW-",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d7f3fb0b-7463-4a4b-cb55-277cbd2d26be"
+        "outputId": "79ae906f-4ce2-49ef-90f1-86acff77b44b"
       },
       "outputs": [
         {
@@ -45,19 +45,36 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 8
         }
       ],
       "source": [
         "import pandas as pd\n",
         "\n",
-        "mengajar = pd.read_csv('/content/mengajar.csv', encoding='utf8')\n",
-        "dosen = pd.read_csv('/content/tb_dosen.csv', encoding='utf8')\n",
-        "kelas = pd.read_csv('/content/tb_kelas.csv', encoding='utf8')\n",
-        "krs = pd.read_csv('/content/tb_krs.csv', encoding='utf8')\n",
-        "mahasiswa = pd.read_csv('/content/tb_mahasiswa.csv', encoding='utf8')\n",
-        "matkul = pd.read_csv('/content/tb_mata_kuliah.csv', encoding='utf8')\n",
-        "nilai = pd.read_csv('/content/tb_nilai.csv', encoding='utf8')\n",
+        "try:\n",
+        "  mengajar = pd.read_csv('/content/mengajar.csv', encoding='utf8')\n",
+        "  dosen = pd.read_csv('/content/tb_dosen.csv', encoding='utf8')\n",
+        "  kelas = pd.read_csv('/content/tb_kelas.csv', encoding='utf8')\n",
+        "  krs = pd.read_csv('/content/tb_krs.csv', encoding='utf8')\n",
+        "  mahasiswa = pd.read_csv('/content/tb_mahasiswa.csv', encoding='utf8')\n",
+        "  matkul = pd.read_csv('/content/tb_mata_kuliah.csv', encoding='utf8')\n",
+        "  nilai = pd.read_csv('/content/tb_nilai.csv', encoding='utf8')\n",
+        "except:\n",
+        "  !mkdir /content\n",
+        "  !wget -P /content/https://raw.githubusercontent.com/Della-wiyanti/Study-Case02-Kelompok05/main/Case%20Study%2002%20-%20Data%20Wrangling%20-%20Academics%20Analysis%20(2)/CS02/mengajar.csv\n",
+        "  !wget -P /content/https://raw.githubusercontent.com/Della-wiyanti/Study-Case02-Kelompok05/main/Case%20Study%2002%20-%20Data%20Wrangling%20-%20Academics%20Analysis%20(2)/CS02/tb_dosen.csv\n",
+        "  !wget -P /content/https://raw.githubusercontent.com/Della-wiyanti/Study-Case02-Kelompok05/main/Case%20Study%2002%20-%20Data%20Wrangling%20-%20Academics%20Analysis%20(2)/CS02/tb_kelas.csv\n",
+        "  !wget -P /content/https://raw.githubusercontent.com/Della-wiyanti/Study-Case02-Kelompok05/main/Case%20Study%2002%20-%20Data%20Wrangling%20-%20Academics%20Analysis%20(2)/CS02/tb_krs.csv\n",
+        "  !wget -P /content/https://raw.githubusercontent.com/Della-wiyanti/Study-Case02-Kelompok05/main/Case%20Study%2002%20-%20Data%20Wrangling%20-%20Academics%20Analysis%20(2)/CS02/tb_mahasiswa.csv\n",
+        "  !wget -P /content/https://raw.githubusercontent.com/Della-wiyanti/Study-Case02-Kelompok05/main/Case%20Study%2002%20-%20Data%20Wrangling%20-%20Academics%20Analysis%20(2)/CS02/tb_mata_kuliah.csv\n",
+        "  !wget -P /content/https://raw.githubusercontent.com/Della-wiyanti/Study-Case02-Kelompok05/main/Case%20Study%2002%20-%20Data%20Wrangling%20-%20Academics%20Analysis%20(2)/CS02/tb_nilai.csv\n",
+        "  mengajar = pd.read_csv('/content/mengajar.csv', encoding='utf8')\n",
+        "  dosen = pd.read_csv('/content/tb_dosen.csv', encoding='utf8')\n",
+        "  kelas = pd.read_csv('/content/tb_kelas.csv', encoding='utf8')\n",
+        "  krs = pd.read_csv('/content/tb_krs.csv', encoding='utf8')\n",
+        "  mahasiswa = pd.read_csv('/content/tb_mahasiswa.csv', encoding='utf8')\n",
+        "  matkul = pd.read_csv('/content/tb_mata_kuliah.csv', encoding='utf8')\n",
+        "  nilai = pd.read_csv('/content/tb_nilai.csv', encoding='utf8')\n",
         "\n",
         "mengajar.shape, dosen.shape, kelas.shape, krs.shape, mahasiswa.shape, matkul.shape, nilai.shape"
       ]
@@ -81,9 +98,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "1c7543c8-c4fe-4899-8ee5-3d7f3e2df3e0"
+        "outputId": "0f4c1ecc-bb52-4c96-9106-2a786265dc2b"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -98,7 +115,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-661128ee-6f65-4958-9fd6-ef577bab1620\">\n",
+              "  <div id=\"df-3081f163-cbae-454c-8744-39f2d47145cf\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -157,7 +174,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-661128ee-6f65-4958-9fd6-ef577bab1620')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3081f163-cbae-454c-8744-39f2d47145cf')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -208,12 +225,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-661128ee-6f65-4958-9fd6-ef577bab1620 button.colab-df-convert');\n",
+              "          document.querySelector('#df-3081f163-cbae-454c-8744-39f2d47145cf button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-661128ee-6f65-4958-9fd6-ef577bab1620');\n",
+              "          const element = document.querySelector('#df-3081f163-cbae-454c-8744-39f2d47145cf');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -236,7 +253,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 4
         }
       ]
     },
@@ -264,28 +281,27 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 237
+          "height": 206
         },
         "id": "Mn1aTMkn22ZR",
-        "outputId": "ee007d69-bb4d-49ff-a19f-059897c66f81"
+        "outputId": "76afda99-7222-4300-da71-c8302f88e228"
       },
-      "execution_count": 60,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "      NIDN Pendidikan_Terakhir\n",
-              "123    NaN                  S3\n",
-              "234    NaN                  S3\n",
-              "345    NaN                  S2\n",
-              "787    NaN                  S2\n",
-              "S2   566.0                 NaN\n",
-              "S3   178.5                 NaN"
+              "               nama  mean_nilai  std_nilai Pendidikan_Terakhir\n",
+              "NIDN                                                          \n",
+              "123    Andri Basuki   85.750000   7.741355                  S3\n",
+              "234        zulfikar   80.428571  15.883504                  S3\n",
+              "345   Annisa Fitria   60.090909  16.220077                  S2\n",
+              "787            yudi   70.571429  13.010984                  S2"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2ee2bd0c-a97f-49f2-8d96-8c6a5f04bd79\">\n",
+              "  <div id=\"df-53543738-c88d-4510-8657-5e4e1dd68508\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -305,45 +321,52 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>NIDN</th>\n",
+              "      <th>nama</th>\n",
+              "      <th>mean_nilai</th>\n",
+              "      <th>std_nilai</th>\n",
               "      <th>Pendidikan_Terakhir</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>NIDN</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>123</th>\n",
-              "      <td>NaN</td>\n",
+              "      <td>Andri Basuki</td>\n",
+              "      <td>85.750000</td>\n",
+              "      <td>7.741355</td>\n",
               "      <td>S3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>234</th>\n",
-              "      <td>NaN</td>\n",
+              "      <td>zulfikar</td>\n",
+              "      <td>80.428571</td>\n",
+              "      <td>15.883504</td>\n",
               "      <td>S3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>345</th>\n",
-              "      <td>NaN</td>\n",
+              "      <td>Annisa Fitria</td>\n",
+              "      <td>60.090909</td>\n",
+              "      <td>16.220077</td>\n",
               "      <td>S2</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>787</th>\n",
-              "      <td>NaN</td>\n",
+              "      <td>yudi</td>\n",
+              "      <td>70.571429</td>\n",
+              "      <td>13.010984</td>\n",
               "      <td>S2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>S2</th>\n",
-              "      <td>566.0</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>S3</th>\n",
-              "      <td>178.5</td>\n",
-              "      <td>NaN</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2ee2bd0c-a97f-49f2-8d96-8c6a5f04bd79')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-53543738-c88d-4510-8657-5e4e1dd68508')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -394,12 +417,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-2ee2bd0c-a97f-49f2-8d96-8c6a5f04bd79 button.colab-df-convert');\n",
+              "          document.querySelector('#df-53543738-c88d-4510-8657-5e4e1dd68508 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2ee2bd0c-a97f-49f2-8d96-8c6a5f04bd79');\n",
+              "          const element = document.querySelector('#df-53543738-c88d-4510-8657-5e4e1dd68508');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -422,7 +445,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 60
+          "execution_count": 6
         }
       ]
     },
@@ -450,7 +473,7 @@
         "id": "Gbvo8OG53too",
         "outputId": "541c642c-7bbd-45a5-802e-35b715429053"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -614,7 +637,7 @@
         "id": "0p7j_qcgCNdB",
         "outputId": "c2ed6968-dd4e-4b23-b961-d9fde96fa23b"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -773,7 +796,7 @@
         "id": "fNPyVAh9B4oD",
         "outputId": "e0f84433-5cd0-41d9-8eec-c138f29196c2"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -921,6 +944,15 @@
       "metadata": {
         "id": "2Mkt7Vy5DyOK"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yUOxfW2Zr1Uj"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
