--- a/Study_Case_02_Kelompok_05.ipynb
+++ b/Study_Case_02_Kelompok_05.ipynb
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "id": "iTSclcvhiwW-",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8c1f3d63-025b-4813-caa0-0d4413a1c0ea"
+        "outputId": "6457fcef-1d43-43ca-ee34-9e6325e107cf"
       },
       "outputs": [
         {
@@ -45,7 +45,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 8
         }
       ],
       "source": [
@@ -929,7 +929,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "aku membuat "
+      ],
       "metadata": {
         "id": "yUOxfW2Zr1Uj"
       },
