--- a/Study_Case_02_Kelompok_05.ipynb
+++ b/Study_Case_02_Kelompok_05.ipynb
@@ -27,14 +27,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "KELOMPOK 5\n",
+        "1. Reysia Amanda Yura (11210940000008)\n",
+        "2. Adinda Anas Qolbu (11210940000011)\n",
+        "3. Della Wiyanti (11210940000014)\n",
+        "4. Azzahra Ghina Lutfiani (11210940000021)\n",
+        "5. Intan Syafitri (11210940000025)\n",
+        "6. Aulia Aprinisa Widhianengrum (11210940000034)\n"
+      ],
+      "metadata": {
+        "id": "hWepGc1GA5L8"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "iTSclcvhiwW-",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6457fcef-1d43-43ca-ee34-9e6325e107cf"
+        "outputId": "8c1f3d63-025b-4813-caa0-0d4413a1c0ea"
       },
       "outputs": [
         {
@@ -45,7 +60,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 6
         }
       ],
       "source": [
@@ -928,15 +943,37 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "aku membuat "
+        "interpretasi 06 : \n",
+        "- Terdapat satu variabel yang tidak diperlukan seperti rand yang tidak memiliki nilai\n",
+        "- Terlalu banyak variabel yang tidak diperlukan yang terdapat pada informasi lain di dalam data sehingga harus dikelola terlebih dahulu sebelum dianalisis"
       ],
       "metadata": {
-        "id": "yUOxfW2Zr1Uj"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "hx2fWyk10J6A"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Kesimpulan :\n",
+        "\n",
+        "  Dosen yang memberi nilai paling besar adalah Bapak Andri Basuki. Dosen dengan pendidikan terakhir S3 cenderung memberikan nilai lebih besar\n",
+        "Kedua poin ini membentuk asumsi bahwa pengalaman dan keilmuan yang dimiliki oleh para dosen pengampu berpengaruh terhadap tersampaikannya materi yang jelas kepada mahasiswa, sehingga dosen yang lebih memiliki pengalaman dan keilmuan lebih tinggi dianggap dapat memberikan perkuliahan yang lebih baik.\n",
+        "\n",
+        "  Mahasiswa dengan asal sekolah SMK lebih tinggi dibanding MA dn SMU\n",
+        "Interpretasi ini membentuk asumsi bahwa lulusan SMK dapat lebih memahami materi yang disampaikan lebih baik karena sudah memiliki keilmuan yang dibentuk sejak masa SMK, dibanding dengan mahasiswa SMA dan MU yang hanya memiliki keilmuan umum tanpa penjuruan\n",
+        "\n",
+        "  Kemampuan akademik mahasiswa lebih tinggi dibanding mahasiswi\n",
+        "Hal ini membentuk asumsi bahwa cara berfikir mahasiswa yang cenderung menggunakan logika lebih dapat membantu mereka dalam pemahaman materi yang diberikan oleh dosen pengampu\n",
+        "\n",
+        "  Rata-rata nilai tahun 2019 lebih tinggi dibanding 2020 dan 2021\n",
+        "Jika dihubungkan dengan hal yang telah terjadi di Indonesia belakangan ini yaitu pandemi yang bertepatan pada 2020 dan 2021, dapat diasumsikan bahwa hal tersebut berpengaruh dalam pendapatan nilai mahasiswa, hal ini yang dapat ditelusuri lebih dalam lagi pada keefektifan pembelajaran secara daring, motivasi mahasiswa selama pandemi, serta lingkungan mahasiswa yang membentuk hal baru terhadap kegiatan belajar mengajar\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "tgzLmSgn02VS"
+      }
     }
   ]
 }
